--- a/core/res/src/main/res/values-ja/strings.xml
+++ b/core/res/src/main/res/values-ja/strings.xml
@@ -12,6 +12,10 @@
   <string name="access_code_create_description">ウォレットのロックを解除するには、 %s桁のアクセスコードを設定します。</string>
   <string name="access_code_create_title">アクセスコードの作成</string>
   <string name="access_code_navtitle">アクセスコード</string>
+  <string name="account_details_archive">アカウントをアーカイブする</string>
+  <string name="account_details_archive_action">アーカイブ</string>
+  <string name="account_details_archive_description">このアカウントをアーカイブしますが、いつでも復元できます。</string>
+  <string name="account_details_title">アカウント</string>
   <string name="account_form_create_button">アカウントを追加</string>
   <string name="account_form_edit_button">保存</string>
   <string name="account_form_name">アカウント名</string>
@@ -58,12 +62,16 @@
   <string name="alert_manage_tokens_unsupported_message">%1$s ネットワークのトークンは、ファームウェアの制限により、このカードまたはリングではサポートされていません。</string>
   <string name="alert_troubleshooting_scan_card_title">カードまたはリングのスキャンに問題がありますか？</string>
   <string name="alert_unsupported_card">このカードはこのアプリでは使用できません。</string>
+  <string name="app_settings_biometrics_footer">%1$sを使用すると、ウォレットのロックを迅速かつ安全に解除できます。また、取引の署名など、機密性の高い操作も承認できます。ハードウェアウォレットの場合は、署名にカードが必要です。</string>
   <string name="app_settings_default_fee">デフォルト手数料</string>
   <string name="app_settings_default_fee_footer">デフォルト手数料を有効にすると、取引手数料が自動的に設定され、送金時に手数料ページを表示する必要がなくなります。必要に応じて、いつでもこのページに戻ることができます。</string>
   <string name="app_settings_enable_biometrics_description">設定に移動して、Tangemアプリで生体認証を有効にします。</string>
   <string name="app_settings_enable_biometrics_title">生体認証を有効にする</string>
+  <string name="app_settings_off_biometrics_alert_message">%1$sが無効になると、アプリのロックを解除してウォレットを操作するために、パスコードを入力する必要があります。</string>
   <string name="app_settings_off_saved_access_code_alert_message">これにより、保存されているウォレットアクセスコードがすべて削除されます。ウォレットでの今後の操作には、アクセスコードの送信が必要になります。</string>
   <string name="app_settings_off_saved_wallet_alert_message">保存したデバイスを削除すると、保存されているすべてのウォレットとそのアクセスコードがアプリから削除されます。</string>
+  <string name="app_settings_require_access_code">アクセスコードを要求する</string>
+  <string name="app_settings_require_access_code_footer">このオプションを選択すると、機密性の高い操作における生体認証が無効になります。取引の署名時などには、毎回アクセスコードの入力が必要になります。</string>
   <string name="app_settings_saved_access_codes">アクセスコードを保存</string>
   <string name="app_settings_saved_access_codes_footer">カードまたはリングとのやり取りには、アクセスコードの代わりに生体認証が要求されます。</string>
   <string name="app_settings_saved_wallet">ウォレットをアプリに保存する</string>
@@ -89,6 +97,7 @@
   <string name="backup_info_save_description">これらの%s個の単語をパスワードマネージャーなどの安全な場所に保存し、決して他の人と共有しないでください。</string>
   <string name="backup_info_save_title">復元は不可能です</string>
   <string name="backup_info_title">リカバリーフレーズ</string>
+  <string name="backup_seed_caution">これらの単語は、絶対に誰にも共有しないでください。もし他人がこの単語を知れば、あなたの暗号資産をすべて盗むことができます。Tangemがこれらの単語を尋ねることはありません。以下の%s単語はウォレットの復元フレーズです。これらのフレーズを使用すると、デバイスを紛失した場合でもウォレットを復元できます。</string>
   <string name="backup_seed_description">これらの%s語を順番に書き留めて、安全かつプライベートに保管してください。</string>
   <string name="backup_seed_responsibility">ウォレットと、リカバリーフレーズのセキュリティとバックアップの全責任は、Tangemではなくユーザーにあります。</string>
   <string name="backup_seed_title">リカバリーフレーズ</string>
@@ -166,6 +175,7 @@
   <string name="common_close">閉じる</string>
   <string name="common_coming_soon">近日公開</string>
   <string name="common_confirm">確認</string>
+  <string name="common_connecting">接続中</string>
   <string name="common_contact_tangem_support">Tangemサポートへ問い合わせる</string>
   <string name="common_contact_visa_support">Visaサポートへ問い合わせる</string>
   <string name="common_continue">続ける</string>
@@ -182,6 +192,7 @@
     <item quantity="other">日</item>
   </plurals>
   <string name="common_delete">削除</string>
+  <string name="common_disable">無効にする</string>
   <string name="common_disabled">無効</string>
   <string name="common_disconnect">切断</string>
   <string name="common_done">完了</string>
@@ -221,6 +232,7 @@
   <string name="common_no">いいえ</string>
   <string name="common_no_address">アドレスがありません</string>
   <string name="common_not_added">未追加</string>
+  <string name="common_not_now">今はしない</string>
   <string name="common_now">今</string>
   <string name="common_ok">わかりました</string>
   <string name="common_open_in_browser">ブラウザで開く</string>
@@ -267,6 +279,9 @@
   <string name="common_terms_and_conditions">利用規約</string>
   <string name="common_terms_of_use">利用規約</string>
   <string name="common_today">今日</string>
+  <plurals name="common_tokens_count">
+    <item quantity="other">%d トークン</item>
+  </plurals>
   <string name="common_transaction_failed">取引が失敗しました</string>
   <string name="common_transaction_status">取引状況</string>
   <string name="common_transactions">取引</string>
@@ -333,9 +348,12 @@
   <string name="details_title">詳細</string>
   <string name="disclaimer_error_loading">インターネット接続を確認するか、別のネットワークに切り替えてください。</string>
   <string name="disclaimer_title">利用規約</string>
+  <string name="domain_receive_assets_navigation_title">資金を受け取る</string>
   <string name="domain_receive_assets_onboarding_description">他のネットワークで資産を送金すると、永久に失われます。</string>
   <string name="domain_receive_assets_onboarding_network_name">%sネットワーク</string>
   <string name="domain_receive_assets_onboarding_title">下記のみを使用して資金を送金する</string>
+  <string name="email_preface_wc_error">サポートチームの皆様、コード %s のエラーが発生しました。</string>
+  <string name="email_subject_wc_error">WalletConnect エラー</string>
   <string name="error_wrong_wallet_tapped">別のウォレットのカードまたはリングを使用しました。このウォレットにリンクしているカードまたはリングをタップしてください。</string>
   <string name="eth_gas_required_exceeds_allowance">取引に必要な資金が不足しています。アカウントに入金してください。</string>
   <string name="exchange_tokens_available_tokens_header">マイトークン</string>
@@ -441,10 +459,15 @@
   <string name="home_button_scan">Tangemをスキャン</string>
   <string name="hot_crypto_add_token_subtitle">%sへ</string>
   <string name="hot_crypto_token_network">%sネットワーク</string>
+  <string name="hw_access_code_create_alert_title">アクセスコードの作成プロセスを終了してもよろしいですか？</string>
   <string name="hw_activation_need_backup">今すぐバックアップ</string>
   <string name="hw_activation_need_description">セットアップを完了するには、ウォレットをバックアップし、アクセスコードを使用してアプリへのアクセスを保護します。</string>
   <string name="hw_activation_need_finish">今すぐ実施</string>
   <string name="hw_activation_need_title">ウォレットのアクティベーションを完了する</string>
+  <string name="hw_activation_need_warning_description">セットアップを完了するには、アクセスコードを使用してアプリへのアクセスを保護します。</string>
+  <string name="hw_backup_alert_description">そうした場合は、最初からやり直す必要があります。</string>
+  <string name="hw_backup_alert_title">アクティベーションプロセスを終了してもよろしいですか？</string>
+  <string name="hw_backup_close_description">実行すると、最初からやり直す必要があります。</string>
   <string name="hw_backup_google_drive_description">Googleドライブのバックアップに保存されている既存のウォレットを復元する</string>
   <string name="hw_backup_google_drive_title">Googleドライブのバックアップ</string>
   <string name="hw_backup_need_action">バックアップへ移動</string>
@@ -458,6 +481,7 @@
   <string name="hw_create_seed_description">最新の機能とニュースをお届けします</string>
   <string name="hw_create_seed_title">シードフレーズのバックアップ</string>
   <string name="hw_create_title">モバイルウォレットを作成する</string>
+  <string name="hw_mobile_wallet">モバイルウォレット</string>
   <string name="information_generated_with_ai">この情報はAIで生成されました。 \nエラーが見つかった場合は、ここをタップしてください。</string>
   <string name="initial_message_change_access_code_body">アクセスコードを変更するには、上図のようにカードまたはリングをタップし、操作が終了するまで取り外さないでください。</string>
   <string name="initial_message_change_passcode_body">パスコードを変更するには、上記のようにカードをタップし、操作が終了するまで取り外さないでください。</string>
@@ -954,15 +978,17 @@
   <string name="send_validation_invalid_amount">無効な金額</string>
   <string name="send_validation_invalid_fee">手数料が残高を超えています</string>
   <string name="send_validation_invalid_total">合計金額が残高を超えています</string>
-  <string name="send_with_swap_change_token_alert_message">トークンを変更してもよろしいですか？ 変更後、以前のデータはリセットされます。</string>
+  <string name="send_with_swap_change_token_alert_message">受信トークンを変更してもよろしいですか？ 変更すると、以前入力したデータがリセットされます。</string>
   <string name="send_with_swap_change_token_alert_title">トークンの変更</string>
   <string name="send_with_swap_confirm_title">スワップして送信</string>
+  <string name="send_with_swap_convert_token_alert_message">変換を続行しますか? これにより以前のデータは消去されます。</string>
+  <string name="send_with_swap_convert_token_alert_title">変換を確定</string>
   <string name="send_with_swap_notification_text">トークンを送信すれば、送信中に変換されます。受信者は必要なものをシームレスに受け取ります。</string>
   <string name="send_with_swap_recipient_amount_success_title">受信者は受け取ります</string>
-  <string name="send_with_swap_recipient_amount_text">受信者に送信されます</string>
+  <string name="send_with_swap_recipient_amount_text">受取人へ</string>
   <string name="send_with_swap_recipient_amount_title">受取金額</string>
-  <string name="send_with_swap_remove_convert_alert_message">変換をキャンセルしてもよろしいですか？ 変更後、以前のデータはリセットされます。</string>
-  <string name="send_with_swap_remove_convert_alert_title">キャンセルの確認</string>
+  <string name="send_with_swap_remove_convert_alert_message">変換をキャンセルしてもよろしいですか？以前のデータは消去されます。</string>
+  <string name="send_with_swap_remove_convert_alert_title">変換を削除</string>
   <string name="send_with_swap_title">スワップして送信</string>
   <string name="sent_transaction_sent_title">取引が送信されました</string>
   <string name="settings_card_settings_footer">設定したいカードまたはリングをスキャンするために準備してください。</string>
@@ -1420,7 +1446,7 @@
   <string name="wc_alert_unsupported_method_description">エラーコード: 8 005。問題が解決しない場合は、お気軽にサポートまでお問い合わせください。</string>
   <string name="wc_alert_unsupported_method_title">不明なエラーが発生しました</string>
   <string name="wc_alert_unsupported_networks_description">Tangemは現在%sで必要なネットワークをサポートしていません。</string>
-  <string name="wc_alert_unsupported_networks_title">サポートされていないネットワーク</string>
+  <string name="wc_alert_unsupported_networks_title">未対応のネットワーク</string>
   <string name="wc_alert_verified_domain_description">Tangemは%sで必要なネットワークをサポートします</string>
   <string name="wc_alert_verified_domain_title">検証済みドメイン</string>
   <string name="wc_alert_wrong_card_description">アプリで間違ったカードまたはリングが選択されました</string>
@@ -1451,6 +1477,12 @@
   <string name="wc_disconnect_all">すべての接続を解除する</string>
   <string name="wc_disconnect_all_alert_desc">すべてのdAppsの接続解除に関するテキスト</string>
   <string name="wc_disconnect_all_alert_title">すべてのdAppを接続解除する</string>
+  <string name="wc_errors_invalid_domain_subtitle">新しいURIで、再度ペアリングを試してください</string>
+  <string name="wc_errors_invalid_domain_title">無効なdAppドメイン</string>
+  <string name="wc_errors_no_blockchains_subtitle">%sはブロックチェーンを指定していません（必須でもオプションでもありません）。 \n正しいURIを使用していることを確認してください。</string>
+  <string name="wc_errors_no_blockchains_title">ネットワークなし</string>
+  <string name="wc_errors_proposal_expired_subtitle">新しいURIを生成し、再度接続してください</string>
+  <string name="wc_errors_proposal_expired_title">接続提案の期限が切れました</string>
   <string name="wc_estimated_wallet_changes">ウォレットの変更の予測</string>
   <string name="wc_estimated_wallet_changes_not_simulated">取引をシミュレーションできませんでした。注意して続行してください。</string>
   <string name="wc_estimation_is_not_supported">%sでは見積もりはサポートされていません</string>
@@ -1461,13 +1493,14 @@
   <string name="wc_missing_required_network_description">このウォレットのポートフォリオに%sネットワークを追加します</string>
   <string name="wc_missing_required_network_title">ウォレットに必要なネットワークはありません</string>
   <string name="wc_new_connection">新しい接続</string>
-  <string name="wc_no_sessions_desc">ウォレットを別のdAppに接続する</string>
+  <string name="wc_no_sessions_desc">ウォレットをさまざまなdAppに接続する</string>
   <string name="wc_no_sessions_title">セッションなし</string>
   <string name="wc_no_wallet_changes_detected">ウォレットの変更は検出されませんでした</string>
-  <string name="wc_notification_security_risk_subtitle">このドメインは複数のセキュリティプロバイダーから安全でないとの警告を受けています。あなたの資産を守るため、直ちにアクセスを中止してください。</string>
+  <string name="wc_notification_security_risk_subtitle">潜在的なリスクまたは悪意のある行為が検出されました。接続または取引への署名は資金の損失につながる可能性があります。</string>
   <string name="wc_notification_security_risk_title">既知のセキュリティリスク</string>
+  <string name="wc_qr_scan_hint">Web3アプリを開き、WalletConnectオプションを選択します</string>
   <string name="wc_request_from">リクエスト元</string>
-  <string name="wc_send_anyway">とにかく送金</string>
+  <string name="wc_send_anyway">とにかく署名する</string>
   <string name="wc_signature_type">署名タイプ</string>
   <string name="wc_specify_networks_subtitle">dApp接続には、少なくとも1つのネットワークが必要です</string>
   <string name="wc_specify_networks_title">選択したネットワークを指定する</string>
