--- a/core/res/src/main/res/values-ru/strings.xml
+++ b/core/res/src/main/res/values-ru/strings.xml
@@ -116,11 +116,12 @@
   <string name="common_choose_action">Выберите действие</string>
   <string name="common_choose_network">Выберите сеть</string>
   <string name="common_choose_token">Выберите токен</string>
-  <string name="common_choose_wallet">Выберите кошелек</string>
+  <string name="common_choose_wallet">Выберите кошелёк</string>
   <string name="common_claim">Получить</string>
   <string name="common_claim_rewards">Вывести награду</string>
   <string name="common_close">Закрыть</string>
   <string name="common_confirm">Подтвердить</string>
+  <string name="common_connecting">Подключение</string>
   <string name="common_continue">Продолжить</string>
   <string name="common_copy">Копировать</string>
   <string name="common_copy_address">Скопировать адрес</string>
@@ -219,6 +220,12 @@
   <string name="common_terms_and_conditions">условия участия</string>
   <string name="common_terms_of_use">Условиями использования</string>
   <string name="common_today">Сегодня</string>
+  <plurals name="common_tokens_count">
+    <item quantity="one">%d токен</item>
+    <item quantity="few">%d токена</item>
+    <item quantity="many">%d токенов</item>
+    <item quantity="other">%d токенов</item>
+  </plurals>
   <string name="common_transaction_failed">Ошибка транзакции</string>
   <string name="common_transaction_status">Статус транзакции</string>
   <string name="common_transactions">Транзакции</string>
@@ -284,6 +291,8 @@
   <string name="details_title">Подробности</string>
   <string name="disclaimer_error_loading">Проверьте подключение с интернетом или переключитесь на другую сеть</string>
   <string name="disclaimer_title">Условия использования</string>
+  <string name="email_preface_wc_error">Привет, команда поддержки, у меня возникла ошибка с кодом: %s</string>
+  <string name="email_subject_wc_error">Ошибка WalletConnect</string>
   <string name="error_wrong_wallet_tapped">Вы использовали карту или кольцо от другого кошелька. Приложите карту или кольцо, связанную с этим кошельком.</string>
   <string name="eth_gas_required_exceeds_allowance">Недостаточно средств для совершения транзакции. Пожалуйста, пополните свой аккаунт.</string>
   <string name="exchange_tokens_available_tokens_header">Мои токены</string>
@@ -895,6 +904,18 @@
   <string name="send_validation_invalid_amount">Недопустимая сумма</string>
   <string name="send_validation_invalid_fee">Комиссия превышает остаток</string>
   <string name="send_validation_invalid_total">Отправляемая сумма превышает остаток</string>
+  <string name="send_with_swap_change_token_alert_message">Вы уверены, что хотите изменить токен для получения? Это действие сбросит ранее введённые данные.</string>
+  <string name="send_with_swap_change_token_alert_title">Изменение токена</string>
+  <string name="send_with_swap_confirm_title">Обмен и отправка</string>
+  <string name="send_with_swap_convert_token_alert_message">Продолжить с конвертацией? Это действие удалит предыдущие данные</string>
+  <string name="send_with_swap_convert_token_alert_title">Подтвердить конвертацию</string>
+  <string name="send_with_swap_notification_text">Отправьте любой токен, и мы конвертируем его по пути. Адресат получит именно то, что нужно — без лишних действий.</string>
+  <string name="send_with_swap_recipient_amount_success_title">Будет получено</string>
+  <string name="send_with_swap_recipient_amount_text">Получателю</string>
+  <string name="send_with_swap_recipient_amount_title">Сумма к получению</string>
+  <string name="send_with_swap_remove_convert_alert_message">Вы уверены, что хотите отменить конвертацию? Ваши предыдущие данные будут удалены.</string>
+  <string name="send_with_swap_remove_convert_alert_title">Убрать конвертацию</string>
+  <string name="send_with_swap_title">Отправка с обменом</string>
   <string name="sent_transaction_sent_title">Транзакция отправлена</string>
   <string name="settings_card_settings_footer">Подготовьтесь к сканированию кольца или карты, которую вы хотите настроить.</string>
   <string name="settings_forget_wallet">Забыть кошелек</string>
@@ -1285,7 +1306,7 @@
   <string name="warning_token_trustline_title">Требуется трастлайн</string>
   <string name="wc_alert_audit_malicious_domain">Вредоносный домен</string>
   <string name="wc_alert_audit_unknown_domain">Неизвестный домен</string>
-  <string name="wc_alert_connect_anyway">Подключиться всё равно</string>
+  <string name="wc_alert_connect_anyway">Всё равно подключиться</string>
   <string name="wc_alert_connection_timeout_description">Ошибка тайм-аута. Пожалуйста, попробуйте позже.</string>
   <string name="wc_alert_connection_timeout_title">Не удалось подключиться через Wallet Connect</string>
   <string name="wc_alert_domain_issues_description">Этот домен не может быть верифицирован. Внимательно проверьте запрос перед одобрением.</string>
@@ -1329,6 +1350,12 @@
   <string name="wc_dapp_disconnected">dApp отключен</string>
   <string name="wc_disconnect_all">Отключить все</string>
   <string name="wc_disconnect_all_alert_title">Отключить все dApp</string>
+  <string name="wc_errors_invalid_domain_subtitle">Попробуйте соединиться снова, используя новый URI</string>
+  <string name="wc_errors_invalid_domain_title">Недействительный домен dApp</string>
+  <string name="wc_errors_no_blockchains_subtitle">%s не указывает никаких блокчейнов — ни обязательных, ни опциональных.\nПожалуйста, убедитесь, что вы использовали правильный URI</string>
+  <string name="wc_errors_no_blockchains_title">Нет сетей</string>
+  <string name="wc_errors_proposal_expired_subtitle">Пожалуйста, сгенерируйте новый URI и попробуйте подключиться снова</string>
+  <string name="wc_errors_proposal_expired_title">Предложение подключения истекло</string>
   <string name="wc_estimated_wallet_changes">Предварительные изменения</string>
   <string name="wc_estimated_wallet_changes_not_simulated">Не удалось выполнить симуляцию транзакции. Пожалуйста, действуйте с осторожностью.</string>
   <string name="wc_estimation_is_not_supported">Оценка не поддерживается для %s</string>
